--- a/Sprint3/02.istanbul.html
+++ b/Sprint3/02.istanbul.html
@@ -17,15 +17,15 @@
     <!-- color: Yazı rengini belirler. brown (kahverengi) olarak ayarlanmış -->
     <!-- font-size: Yazı boyutunu belirler. 20 piksel olarak ayarlanmış -->
      <!--inline css ile stil tanımlaması-->
-    <h1 style="color: brown; font-size: 20px;">İstanbul</h1>
+    <h1 style="color: brown; font-size: 20px;" class"title">İstanbul</h1>
     <img src="https://www.melares.com/uploads/istanbul-districts435513953.jpg">
     <p>
-        İstanbul Türkiye'de <a target="_blank" href="https://tr.wikipedia.org/wiki/Marmara_Bölgesi">Marmara Bölgesi</a>'nde yer alan şehir ve Türkiye'nin 81 ilinden biridir. Ülkenin nüfus
+        İstanbul Türkiye'de <a id="marmara-link" target="_blank" href="https://tr.wikipedia.org/wiki/Marmara_Bölgesi">Marmara Bölgesi</a>'nde yer alan şehir ve Türkiye'nin 81 ilinden biridir. Ülkenin nüfus
         bakımından en çok göç alan ve en kalabalık ilidir. Ekonomik, tarihi ve sosyo-kültürel açıdan önde gelen
         şehirlerden biridir. Şehir, iktisadi büyüklük açısından dünyada 34. sırada yer alır.
     </p>
 
-    <h2>Tarihi yerler</h2>
+    <h2 class="title">Tarihi yerler</h2>
     <p>
         Binlerce yıldır, değişik insan topluluklarına yurt olan İstanbul topraklarının hemen her yöresinde, tarihi
         özellikli dönemlerinden kalma tarihi eserlerle karşılaşmak mümkündür.
