--- a/Sprint3/02.istanbul.html
+++ b/Sprint3/02.istanbul.html
@@ -19,21 +19,23 @@
      <!--inline css ile stil tanımlaması-->
     <h1 style="color: brown; font-size: 20px;" class"title">İstanbul</h1>
     <img src="https://www.melares.com/uploads/istanbul-districts435513953.jpg">
-    <p>
+    <p class="intro">
         İstanbul Türkiye'de <a id="marmara-link" target="_blank" href="https://tr.wikipedia.org/wiki/Marmara_Bölgesi">Marmara Bölgesi</a>'nde yer alan şehir ve Türkiye'nin 81 ilinden biridir. Ülkenin nüfus
         bakımından en çok göç alan ve en kalabalık ilidir. Ekonomik, tarihi ve sosyo-kültürel açıdan önde gelen
         şehirlerden biridir. Şehir, iktisadi büyüklük açısından dünyada 34. sırada yer alır.
     </p>
 
-    <h2 class="title">Tarihi yerler</h2>
-    <p>
-        Binlerce yıldır, değişik insan topluluklarına yurt olan İstanbul topraklarının hemen her yöresinde, tarihi
-        özellikli dönemlerinden kalma tarihi eserlerle karşılaşmak mümkündür.
-    </p>
-    <ul>
-        <li>Topkapı Sarayı</li>
-        <li>Galata Kulesi</li>
-        <li>Yerebatan Sarnıcı</li>
-    </ul>
+    <div class="dark">
+        <h2 class="title">Tarihi yerler</h2>
+        <p>
+            Binlerce yıldır, değişik insan topluluklarına yurt olan İstanbul topraklarının hemen her yöresinde, tarihi
+            özellikli dönemlerinden kalma tarihi eserlerle karşılaşmak mümkündür.
+        </p>
+        <ul>
+            <li>Topkapı Sarayı</li>
+            <li>Galata Kulesi</li>
+            <li>Yerebatan Sarnıcı</li>
+        </ul>
+    </div>
 </body>
 </html>
