--- a/Sprint3/02.istanbul.html
+++ b/Sprint3/02.istanbul.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İstanbul - Türkiye'nin Kalbi</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css"> <!-- external css ile stil tanımlaması-->
     <style>
         /* internal css ile stil tanımlaması*/
+        .container{
+            width: 680px;
+            margin: 0 auto;
+        }
         h1{
             color: blue;
             font-size: 20px;
@@ -17,25 +22,27 @@
     <!-- color: Yazı rengini belirler. brown (kahverengi) olarak ayarlanmış -->
     <!-- font-size: Yazı boyutunu belirler. 20 piksel olarak ayarlanmış -->
      <!--inline css ile stil tanımlaması-->
-    <h1 style="color: brown; font-size: 20px;" class"title">İstanbul</h1>
-    <img src="https://www.melares.com/uploads/istanbul-districts435513953.jpg">
-    <p class="intro">
-        İstanbul Türkiye'de <a id="marmara-link" target="_blank" href="https://tr.wikipedia.org/wiki/Marmara_Bölgesi">Marmara Bölgesi</a>'nde yer alan şehir ve Türkiye'nin 81 ilinden biridir. Ülkenin nüfus
-        bakımından en çok göç alan ve en kalabalık ilidir. Ekonomik, tarihi ve sosyo-kültürel açıdan önde gelen
-        şehirlerden biridir. Şehir, iktisadi büyüklük açısından dünyada 34. sırada yer alır.
-    </p>
-
-    <div class="dark">
-        <h2 class="title">Tarihi yerler</h2>
-        <p>
-            Binlerce yıldır, değişik insan topluluklarına yurt olan İstanbul topraklarının hemen her yöresinde, tarihi
-            özellikli dönemlerinden kalma tarihi eserlerle karşılaşmak mümkündür.
+    <div class="container">
+        <h1 style="color: brown; font-size: 20px;" class="title">İstanbul</h1>
+        <img src="https://www.melares.com/uploads/istanbul-districts435513953.jpg">
+        <p class="intro">
+            İstanbul Türkiye'de <a id="marmara-link" target="_blank" href="https://tr.wikipedia.org/wiki/Marmara_Bölgesi">Marmara Bölgesi</a>'nde yer alan şehir ve Türkiye'nin 81 ilinden biridir. Ülkenin nüfus
+            bakımından en çok göç alan ve en kalabalık ilidir. Ekonomik, tarihi ve sosyo-kültürel açıdan önde gelen
+            şehirlerden biridir. Şehir, iktisadi büyüklük açısından dünyada 34. sırada yer alır.
         </p>
-        <ul>
-            <li>Topkapı Sarayı</li>
-            <li>Galata Kulesi</li>
-            <li>Yerebatan Sarnıcı</li>
-        </ul>
+
+        <div class="dark">
+            <h2 class="title">Tarihi yerler</h2>
+            <p>
+                Binlerce yıldır, değişik insan topluluklarına yurt olan İstanbul topraklarının hemen her yöresinde, tarihi
+                özellikli dönemlerinden kalma tarihi eserlerle karşılaşmak mümkündür.
+            </p>
+            <ul>
+                <li>Topkapı Sarayı</li>
+                <li>Galata Kulesi</li>
+                <li>Yerebatan Sarnıcı</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
